@@ -13,7 +13,8 @@
       37.77256666666666,
       -122.45934166666667
     ],
-    "time_taken": "Wed, 28 Aug 2013 18:12:02 +0000"
+    "time_taken": "Wed, 28 Aug 2013 18:12:02 +0000",
+    "image_dimensions": "todo..."
   },
   "is_dir": false,
   "modifier": null,
