@@ -1,3 +1,4 @@
+- Fix bug parsing "photo_info" in file metadata.
 - Add support for /account/info fields: email, email_verified,
   name_details.
 
